--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  --line-color: black;
+}
+
+html.dark {
+  --line-color: white;
+}
  
 @layer base {
   :root {
