--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,14 @@ html.dark {
     --ring: 212.7 26.8% 83.9%;
   }
 }
+
+.sticky-nav {
+  position: sticky;
+  z-index: 10;
+  top: 0;
+  backdrop-filter: saturate(180%) blur(20px);
+  transition: background-color 0.1 ease-in-out;
+}
  
 @layer base {
   * {
